force-app/main/default/objects/TMS_Site_User_Assignment__c/TMS_Site_User_Assignment__c.object-meta.xml
<CustomObject>
    <label>TMS Site User Assignment</label>
    <nameField>
        <displayFormat>TMS-{0000000}</displayFormat>
        <label>TMS Site User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TMS Site User Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>