force-app/main/default/objects/TMS_Site_User_Assignment__c/fields/Assigned_TMS_Site__c.field-meta.xml
<CustomField>
    <fullName>Assigned_TMS_Site__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Denotes the TMS Site assigned to the Manufacturing User</description>
    <label>Assigned TMS Site</label>
    <referenceTo>TMS_Site__c</referenceTo>
    <relationshipLabel>TMS Site User Assignments</relationshipLabel>
    <relationshipName>TMS_Site_User_Assignments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>