force-app/main/default/objects/TMS_Site_User_Assignment__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Denotes if the TMS Site to User Assignment is active</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>