force-app/main/default/objects/TMS_Site_User_Assignment__c/fields/Is_Default__c.field-meta.xml
<CustomField>
    <fullName>Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes if the TMS Site is Default for the User</description>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>