force-app/main/default/objects/TMS_Site_User_Assignment__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Denotes the Manufacturing User for TMS Site
User Assignment</description>
    <label>User</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only users with the Manufacturing Profile can be assigned to this field.</errorMessage>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Manufacturing</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>TMS_Site_User_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>