force-app/main/default/objects/TMS_Site_User_Assignment__c/validationRules/User_Lookup_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>User_Lookup_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(User__c)</errorConditionFormula>
    <errorDisplayField>User__c</errorDisplayField>
    <errorMessage>You must select a User for this record.</errorMessage>
</ValidationRule>